--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,30 @@
-# Ignora as pastas de dependências do Node.js em todos os subdiretórios
-**/node_modules
-
-# Arquivos de log do npm
-npm-debug.log*
-
-# Variáveis de ambiente
+# Arquivos de ambiente com segredos
 .env
+/frontend/.env
+/backend/.env
+.env.local
 .env.*.local
 
-# Ignora arquivos de sistema e de IDEs
-.DS_Store
-.vscode
+# Dependências (a pasta mais importante a ser ignorada)
+/node_modules
+/frontend/node_modules
+/backend/node_modules
 
-# Ignora a pasta de build do NextJS
-.next
+# Relatórios de Teste (Jest)
+/coverage
+
+# Logs de erro
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Arquivos de build (produção)
+/dist
+/build
+/frontend/dist
+/frontend/.next
+/frontend/out
+
+# Arquivos de Sistema Operacional
+.DS_Store
+Thumbs.db
